<resources>
    <string name="app_name">Guizic</string>
    <string name="button_play_sound">Play sound</string>
    <string name="label_no_hablo">No hablo</string>
    <string name="local_service_started">Guizic en cours d\'exécution</string>
    <string name="local_service_label">Guizic</string>
    <string name="filter_view_http_gizmos">Filter Guizic</string>
    <string name="channel_description">Guizic channel</string>
    <string name="channel_name">GUIZIC</string>
    <string name="title_location_permission">Autorisation d\'accès au GPS</string>
    <string name="text_location_permission">Pour fonctionner Guizic à besoin de pouvoir accéder au GPS</string>
    <string name="ok">Ok</string>
    <string name="yo">Recherche du GPS en cours…</string>
    <string name="nb_boucles">boucles musicales jouées</string>
    <string name="main_page_text">Bienvenue</string>

    <string name="title_activation_gps">Activation GPS</string>
    <string name="activation_gps">Guizic a besoin que le GPS soit activé afin de fonctionner correctement</string>
    <string name="gps_setting">Accéder au paramètre GPS</string>

    <string name="parcoursListButton">Liste des parcours</string>

    <string name="addZoneButton">Ajouter un parcours</string>
    <string name="addZoneName">Nom</string>
    <string name="addZoneLatitude">Latitude</string>
    <string name="addZoneLongitude">Longitude</string>
    <string name="addZoneDistance">Distance (par rapport au point de départ)</string>
    <string name="addZonePickPosition">Choisir une position</string>
    <string name="addZoneAdd">Ajouter le parcours</string>
    <string name="addZoneSounds">Playlist</string>

    <string name="title_activity_add_sounds">AddSounds</string>
    <string name="button_main_add_sound">Ajouter une playlist</string>
    <string name="button_add_sound">Ajouter</string>
    <string name="button_save_sound">Sauvegarder</string>


    <string name="home_text">Journée Science et Musique 2019</string>
    <string name="Start">Commencer</string>
    <string name="suivant">Suivant</string>
</resources>
